--- a/assets/css/Analysis_Page.css
+++ b/assets/css/Analysis_Page.css
@@ -1,1 +1,61 @@
 
+*{
+     margin: 0;
+     padding: 0;
+ }
+ 
+
+ .header{
+     min-height: 100vh;  
+     width: 100%;
+     background-image:linear-gradient(white),white)),url(website/grass.jpg);
+     background-position:center; 
+     background-size: cover;
+     position:relative;
+ }
+
+ .body-section-h1
+ text-color:blue;
+ text-align:center;
+ .section-h1{
+    color:green;
+    text-align:center;
+        }
+ nav {
+     display: flex;
+     padding: 2% 6%;
+     justify-content: space-between;
+     align-items:center;
+ }
+ nav img{
+     width: 150px;
+ }
+ .nav-links{
+     flex: 1;
+     text-align: right;
+ }
+ .nav-links ul li{
+     list-style: none;
+     display: inline-block;
+     padding: 8px 12px;
+     position: relative;
+ }
+
+.nav-links ul li a{
+    color:blue;
+    text-decoration: none;
+    font-size: 16px;
+}
+.text-box{
+    width:100%;
+    color:rgb(11, 99, 70);
+    position:absolute;
+    top:35%;
+    left:40%;
+    transform:translate(-50%,-50%)
+    align -text:center;
+}
+
+
+
+}
