--- a/assets/css/donation.css
+++ b/assets/css/donation.css
@@ -277,3 +277,186 @@ button:hover{
   width: 100%;
   height: 100vh;;
 }
+@media (max-width: 480px) {
+  .slider{
+      width: 100%;
+      height: 60vh;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    
+    .slides{
+      width: 500%;
+      height: 500px;
+      display: flex;
+    }
+    .slide img{
+      width: 100%x;
+      height: 500px;
+      object-fit: cover;
+    }
+    .navigation-manual{
+      display: none;
+    }
+    .navigation-auto{
+     display: none;
+    }
+    .wrapper{
+      background-color: #fff;
+      width: 100%;
+      padding: 20px;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      
+      box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+  }
+  .h4{
+      padding: 2px;
+      color: #000;
+      font-size: 20px;
+  }
+  .wrapper h2{
+      background-color: #fcfcfc;
+      color: #000;
+      font-size: 24px;
+      padding: 20px;
+      text-align: center;
+      
+  }
+}
+
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .slider{
+      width: 100%;
+      height: 60vh;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    
+    .slides{
+      width: 500%;
+      height: 500px;
+      display: flex;
+    }
+    .slide img{
+      width: 100%;
+      height: 500px;
+      object-fit: cover;
+    }
+    .navigation-manual{
+      display: none;
+    }
+    .navigation-auto{
+     display: none;
+    }
+    .wrapper{
+      background-color: #fff;
+      width: 100%;
+      padding: 20px;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      
+      box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+  }
+  .h4{
+      padding: 2px;
+      color: #000;
+      font-size: 20px;
+  }
+  .wrapper h2{
+      background-color: #fcfcfc;
+      color: #000;
+      font-size: 24px;
+      padding: 20px;
+      text-align: center;
+      
+  }
+  
+}
+
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 768px) and (max-width: 992px){
+  .slider{
+      width: 100%;
+      height: 60vh;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    
+    .slides{
+      width: 500%;
+      height: 500px;
+      display: flex;
+    }
+    .slide img{
+      width: 100%;
+      height: 500px;
+      object-fit: cover;
+    }
+    .navigation-manual{
+      display: none;
+    }
+    .navigation-auto{
+     display: none;
+    }
+    .wrapper{
+      background-color: #fff;
+      width: 100%;
+      padding: 20px;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      
+      box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+  }
+  .h4{
+      padding: 2px;
+      color: #000;
+      font-size: 20px;
+  }
+  .wrapper h2{
+      background-color: #fcfcfc;
+      color: #000;
+      font-size: 24px;
+      padding: 20px;
+      text-align: center;
+      
+  }
+  
+}
+/* Media Query for Laptops and Desktops */
+@media (min-width: 993px) and (max-width: 1280px){
+  .slider{
+      width: 100%;
+      height: 100vh;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    
+    .slides{
+      width: 500%;
+      height: 100vh;
+      display: flex;
+    }
+    .slide img{
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+    }
+    .navigation-manual{
+      display: none;
+    }
+    .navigation-auto{
+     display: none;
+    }
+    .wrapper{
+      background-color: #fff;
+      width: 100%;
+      padding: 40px;
+      padding-bottom: 20px;
+      padding-top: 0px;
+      height: 100vh;
+      box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+  }
+  
+}
