--- a/assets/css/Analysis_Page.css
+++ b/assets/css/Analysis_Page.css
@@ -6,7 +6,7 @@
  
 
  .header{
-     min-height: 100vh;  
+     min-height: 200vh;  
      width: 100%;
      background-image:linear-gradient(white),white)),url(website/grass.jpg);
      background-position:center; 
@@ -47,15 +47,22 @@
     font-size: 16px;
 }
 .text-box{
-    width:100%;
+    width:40%;
     color:rgb(11, 99, 70);
     position:absolute;
-    top:35%;
-    left:40%;
+    top:20%;
+    left:60%;
     transform:translate(-50%,-50%)
     align -text:center;
 }
 
-
+.div.graph{
+    width:50%;
+    position:absolute;
+    top:20%
+    left:60%;
+    transform:translate(-50%,-50%)
+    align-text:center;
+}
 
 }
