--- a/assets/css/Analysis_Page.css
+++ b/assets/css/Analysis_Page.css
@@ -77,7 +77,7 @@
         section{
         width:100%;
         height:100%;
-        background:linear-gradient(0deg,#a0d1f1,#ffffff);
+        background:#D7DBDD ;
         }
 
         .box{
